# tauri_leptos_test

./: .gitignore  Cargo.toml  README.md  index.html  output.css  tailwind.config.js
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: helpers.rs  main.rs
