[package]
name = "tauri-app-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.5", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tokio = { version= "1.36.0", features = ["time"] }

[dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
    "Win32_UI",
    "Win32_System_Registry",
]

[workspace]
members = ["src-tauri"]
